# SOPilot

./: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0a704dda7a76_project_subsystems_mode_d_9.py  0f20cfa5d1ed_d11_intake_sessions_routing_events.py  133c2b77914a_turn_instruction_hit_flag.py  21e2e51b824a_config_rulesets_tables.py  432d6104a9e3_p0_initial_schema.py  4e0afee78db4_tenant_secrets.py  7b4b2c32b69f_connectors_table_audit_connector_column.py  7f8ea45e25e0_prompt_blocks_session_bindings_d_7.py  8fd0034b8653_turns_debug_json.py  a0d5104ec5df_session_subsystems_override.py  c26080d9cb39_ab_tests_table.py  fedba019c93a_sop_version_provenance_source_document.py
backend/sopilot/: abtest.py  agent.py  builder.py  config.py  connectors.py  db.py  embeddings.py  events.py  llm.py  mcp_client.py  mcp_server.py  models.py  pool.py  predictor.py  prefetch.py  rerank.py  router.py  runtime.py  scheduler.py  schemas.py  secrets.py  sop_graph.py  supervisor.py  tenancy.py
backend/sopilot/api/: abtests.py  admin.py  app.py  configtools.py  connectors.py  corpora.py  metrics.py  project_io.py  prompt_blocks.py  runtime.py  secrets.py  sessions.py  sops.py  traces.py  voice.py
backend/sopilot/bench/: llm.py  runner.py  sim.py
backend/sopilot/fetchers/: __init__.py  base.py  http.py  mcp.py  mock.py  rag.py
backend/tests/: conftest.py  test_builder.py  test_config_rules.py  test_events.py  test_mcp.py  test_modes.py  test_pool.py  test_predictor_math.py  test_prefetch.py  test_prompt_blocks.py  test_rerank.py  test_sop_graph.py  test_supervisor.py
bench/: BENCH_INSTRUCTION_N20.md  BENCH_P0_PARITY.md  SOPBENCH_PLAN.md  instruction_n20.jsonl  run1_n20_degraded_rerank.jsonl  run2_n10_fixed.jsonl
docs/: AENA_DATASET_ANALYSIS.html  API_REFERENCE.md  BLOG_AENA_POC.html  BLOG_SOPILOT_ARCHITECTURE.html  BLOG_SOPILOT_CONFIG_MANAGEMENT.html  BLOG_SOPILOT_KICKOFF.html  BLOG_SOPILOT_POLARTIE_INTEGRATION.html  INSTALL.md  INTEGRATION.html  INTEGRATION.md  NEW_FEATURES.md  (+5 more)
(+65 files in other folders)
