[project]
name = "sopilot"
version = "0.1.0"
description = "SOPilot — SOP-based conversation agent management (P0 substrate)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "redis>=5.0",
    "pgvector>=0.3",
    "openai>=1.35",
    "numpy>=1.26",
    "pypdf>=5.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "cryptography>=42.0",
    "fastmcp>=3.4",
]

[project.scripts]
sopilot-api = "sopilot.api.app:main"
sopilot-supervisor = "sopilot.supervisor:main"
sopilot-bench = "sopilot.bench.runner:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "fakeredis>=2.23",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "ruff>=0.4",
    "reportlab>=4.0",
]

[tool.setuptools.packages.find]
include = ["sopilot*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py312"
